[gd_scene load_steps=6 format=4 uid="uid://dc5wjmmu0q8en"]

[ext_resource type="Script" path="res://Game/Scripts/build.gd" id="1_i2mu1"]
[ext_resource type="TileSet" uid="uid://34cqn0mav1us" path="res://Assets/menu.tres" id="2_dhyxn"]
[ext_resource type="Texture2D" uid="uid://dv4eykwb2orxt" path="res://Assets/rpgiab_icon_pack_v1.3/32x32/delete.png" id="3_4cii0"]
[ext_resource type="PackedScene" uid="uid://bo5q5j12w41xu" path="res://Game/slot.tscn" id="3_um327"]
[ext_resource type="LabelSettings" uid="uid://btd1oqmfa7ni0" path="res://Assets/text_settings.tres" id="4_b2p4e"]

[node name="Build" type="Node2D"]
script = ExtResource("1_i2mu1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MenuBuild" type="TileMapLayer" parent="CanvasLayer"]
position = Vector2(-13, 11)
tile_map_data = PackedByteArray("AAAZAAUAAAAAAAEAAAAZAAYAAAAAAAIAAAAZAAcAAAAAAAMAAAAZAAgAAAAAAAQAAAAZAAkAAAAAAAUAAAAZAAoAAAAAAAYAAAAaAAUAAAABAAEAAAAaAAYAAAABAAIAAAAaAAcAAAABAAMAAAAaAAgAAAABAAQAAAAaAAkAAAABAAUAAAAaAAoAAAABAAYAAAAbAAUAAAACAAEAAAAbAAYAAAACAAIAAAAbAAcAAAACAAMAAAAbAAgAAAACAAQAAAAbAAkAAAACAAUAAAAbAAoAAAACAAYAAAAcAAUAAAADAAEAAAAcAAYAAAADAAIAAAAcAAcAAAADAAMAAAAcAAgAAAADAAQAAAAcAAkAAAADAAUAAAAcAAoAAAADAAYAAAAdAAUAAAAEAAEAAAAdAAYAAAAEAAIAAAAdAAcAAAAEAAMAAAAdAAgAAAAEAAQAAAAdAAkAAAAEAAUAAAAdAAoAAAAEAAYAAAAeAAUAAAAFAAEAAAAeAAYAAAAFAAIAAAAeAAcAAAAFAAMAAAAeAAgAAAAFAAQAAAAeAAkAAAAFAAUAAAAeAAoAAAAFAAYAAAA0AAUAAAAMAAEAAAA0AAYAAAAMAAIAAAA0AAcAAAAMAAMAAAA0AAgAAAAMAAQAAAA0AAkAAAAMAAUAAAA0AAoAAAAMAAUAAAA1AAUAAAANAAEAAAA1AAYAAAANAAIAAAA1AAcAAAANAAMAAAA1AAgAAAANAAQAAAA1AAkAAAANAAUAAAA1AAoAAAANAAUAAAA2AAUAAAAOAAEAAAA2AAYAAAAOAAIAAAA2AAcAAAAOAAMAAAA2AAgAAAAOAAQAAAA2AAkAAAAOAAUAAAA2AAoAAAAOAAYAAAA3AAUAAAAPAAEAAAA3AAYAAAAPAAIAAAA3AAcAAAAPAAMAAAA3AAgAAAAPAAQAAAA3AAkAAAAPAAUAAAA3AAoAAAAPAAYAAAA4AAUAAAAQAAEAAAA4AAYAAAAQAAIAAAA4AAcAAAAQAAMAAAA4AAgAAAAQAAQAAAA4AAkAAAAQAAUAAAA4AAoAAAAQAAYAAAAfAAUAAAAFAAEAAAAfAAYAAAAFAAIAAAAfAAcAAAAFAAMAAAAfAAgAAAAFAAQAAAAfAAkAAAAFAAUAAAAgAAUAAAAGAAEAAAAgAAYAAAAGAAIAAAAgAAcAAAAGAAMAAAAgAAgAAAAGAAQAAAAgAAkAAAAGAAUAAAAhAAUAAAAHAAEAAAAhAAYAAAAHAAIAAAAhAAcAAAAHAAMAAAAhAAgAAAAHAAQAAAAhAAkAAAAHAAUAAAAiAAUAAAAIAAEAAAAiAAYAAAAIAAIAAAAiAAcAAAAIAAMAAAAiAAgAAAAIAAQAAAAiAAkAAAAIAAUAAAAjAAUAAAAJAAEAAAAjAAYAAAAJAAIAAAAjAAcAAAAJAAMAAAAjAAgAAAAJAAQAAAAjAAkAAAAJAAUAAAAkAAUAAAAKAAEAAAAkAAYAAAAKAAIAAAAkAAcAAAAKAAMAAAAkAAgAAAAKAAQAAAAkAAkAAAAKAAUAAAAlAAUAAAALAAEAAAAlAAYAAAALAAIAAAAlAAcAAAALAAMAAAAlAAgAAAALAAQAAAAlAAkAAAALAAUAAAAmAAUAAAAFAAEAAAAmAAYAAAAFAAIAAAAmAAcAAAAFAAMAAAAmAAgAAAAFAAQAAAAmAAkAAAAFAAUAAAAnAAUAAAAGAAEAAAAnAAYAAAAGAAIAAAAnAAcAAAAGAAMAAAAnAAgAAAAGAAQAAAAnAAkAAAAGAAUAAAAoAAUAAAAHAAEAAAAoAAYAAAAHAAIAAAAoAAcAAAAHAAMAAAAoAAgAAAAHAAQAAAAoAAkAAAAHAAUAAAApAAUAAAAIAAEAAAApAAYAAAAIAAIAAAApAAcAAAAIAAMAAAApAAgAAAAIAAQAAAApAAkAAAAIAAUAAAAqAAUAAAAJAAEAAAAqAAYAAAAJAAIAAAAqAAcAAAAJAAMAAAAqAAgAAAAJAAQAAAAqAAkAAAAJAAUAAAArAAUAAAAKAAEAAAArAAYAAAAKAAIAAAArAAcAAAAKAAMAAAArAAgAAAAKAAQAAAArAAkAAAAKAAUAAAAsAAUAAAALAAEAAAAsAAYAAAALAAIAAAAsAAcAAAALAAMAAAAsAAgAAAALAAQAAAAsAAkAAAALAAUAAAAtAAUAAAAFAAEAAAAtAAYAAAAFAAIAAAAtAAcAAAAFAAMAAAAtAAgAAAAFAAQAAAAtAAkAAAAFAAUAAAAuAAUAAAAGAAEAAAAuAAYAAAAGAAIAAAAuAAcAAAAGAAMAAAAuAAgAAAAGAAQAAAAuAAkAAAAGAAUAAAAvAAUAAAAHAAEAAAAvAAYAAAAHAAIAAAAvAAcAAAAHAAMAAAAvAAgAAAAHAAQAAAAvAAkAAAAHAAUAAAAwAAUAAAAIAAEAAAAwAAYAAAAIAAIAAAAwAAcAAAAIAAMAAAAwAAgAAAAIAAQAAAAwAAkAAAAIAAUAAAAxAAUAAAAJAAEAAAAxAAYAAAAJAAIAAAAxAAcAAAAJAAMAAAAxAAgAAAAJAAQAAAAxAAkAAAAJAAUAAAAyAAUAAAAKAAEAAAAyAAYAAAAKAAIAAAAyAAcAAAAKAAMAAAAyAAgAAAAKAAQAAAAyAAkAAAAKAAUAAAAzAAUAAAALAAEAAAAzAAYAAAALAAIAAAAzAAcAAAALAAMAAAAzAAgAAAALAAQAAAAzAAkAAAALAAUAAAAZAAsAAAAAAAUAAAAZAAwAAAAAAAYAAAAZAA0AAAAAAAcAAAAZAA4AAAAAAAgAAAAaAAsAAAABAAUAAAAaAAwAAAABAAYAAAAaAA0AAAABAAcAAAAaAA4AAAABAAgAAAAbAAsAAAACAAUAAAAbAAwAAAACAAYAAAAbAA0AAAACAAcAAAAbAA4AAAACAAgAAAAcAAsAAAADAAUAAAAcAAwAAAADAAYAAAAcAA0AAAADAAcAAAAcAA4AAAADAAgAAAAZAA8AAAAAAAUAAAAZABAAAAAAAAYAAAAZABEAAAAAAAcAAAAZABIAAAAAAAgAAAAaAA8AAAABAAUAAAAaABAAAAABAAYAAAAaABEAAAABAAcAAAAaABIAAAABAAgAAAAbAA8AAAACAAUAAAAbABAAAAACAAYAAAAbABEAAAACAAcAAAAbABIAAAACAAgAAAAcAA8AAAADAAUAAAAcABAAAAADAAYAAAAcABEAAAADAAcAAAAcABIAAAADAAgAAAAZABMAAAAAAAUAAAAZABQAAAAAAAYAAAAZABUAAAAAAAcAAAAaABMAAAABAAUAAAAaABQAAAABAAYAAAAaABUAAAABAAcAAAAbABMAAAACAAUAAAAbABQAAAACAAYAAAAbABUAAAACAAcAAAAcABMAAAADAAUAAAAcABQAAAADAAYAAAAcABUAAAADAAcAAAA0AAsAAAAMAAYAAAA1AAsAAAANAAYAAAA2AAsAAAAOAAcAAAA3AAsAAAAPAAcAAAA4AAsAAAAQAAcAAAA1AAwAAAANAAcAAAA1AA0AAAANAAgAAAA1AA4AAAANAAgAAAA2AAwAAAAOAAYAAAA2AA0AAAAOAAcAAAA2AA4AAAAOAAgAAAA3AAwAAAAPAAYAAAA3AA0AAAAPAAcAAAA3AA4AAAAPAAYAAAA4AAwAAAAQAAYAAAA4AA0AAAAQAAcAAAA4AA4AAAAQAAYAAAA1AA8AAAANAAYAAAA1ABAAAAANAAcAAAA1ABEAAAANAAgAAAA2AA8AAAAOAAYAAAA2ABAAAAAOAAcAAAA2ABEAAAAOAAgAAAA3AA8AAAAPAAcAAAA3ABAAAAAPAAYAAAA3ABEAAAAPAAcAAAA4AA8AAAAQAAcAAAA4ABAAAAAQAAYAAAA4ABEAAAAQAAcAAAA1ABIAAAANAAYAAAA1ABMAAAANAAcAAAA1ABQAAAANAAgAAAA2ABIAAAAOAAYAAAA2ABMAAAAOAAcAAAA2ABQAAAAOAAgAAAA3ABIAAAAPAAYAAAA3ABMAAAAPAAcAAAA3ABQAAAAPAAYAAAA4ABIAAAAQAAYAAAA4ABMAAAAQAAcAAAA4ABQAAAAQAAYAAAA1ABUAAAANAAYAAAA2ABUAAAAOAAYAAAA3ABUAAAAPAAcAAAA4ABUAAAAQAAcAAAAfAAoAAAAEAAUAAAAfAAsAAAAGAAUAAAAfAAwAAAAGAAYAAAAfAA0AAAAGAAcAAAAgAAoAAAAFAAUAAAAgAAsAAAAHAAUAAAAgAAwAAAAHAAYAAAAgAA0AAAAHAAcAAAAhAAoAAAAGAAUAAAAhAAsAAAAIAAUAAAAhAAwAAAAIAAYAAAAhAA0AAAAIAAcAAAAiAAoAAAAHAAUAAAAiAAsAAAAJAAUAAAAiAAwAAAAJAAYAAAAiAA0AAAAJAAcAAAAjAAoAAAAIAAUAAAAjAAsAAAAKAAUAAAAjAAwAAAAKAAYAAAAjAA0AAAAKAAcAAAAkAAoAAAAJAAUAAAAkAAsAAAALAAUAAAAkAAwAAAALAAYAAAAkAA0AAAALAAcAAAAlAAoAAAAKAAUAAAAlAAsAAAAMAAUAAAAlAAwAAAAMAAYAAAAlAA0AAAAEAAUAAAAmAAoAAAALAAUAAAAmAAsAAAANAAUAAAAmAAwAAAANAAYAAAAmAA0AAAAFAAUAAAAnAAoAAAAMAAUAAAAnAAsAAAAMAAYAAAAnAAwAAAAMAAcAAAAnAA0AAAAGAAUAAAAoAAoAAAAEAAUAAAAoAAsAAAAEAAYAAAAoAAwAAAAEAAUAAAAoAA0AAAAHAAUAAAApAAoAAAAFAAUAAAApAAsAAAAFAAYAAAApAAwAAAAFAAUAAAApAA0AAAAIAAUAAAAqAAoAAAAGAAUAAAAqAAsAAAAGAAYAAAAqAAwAAAAGAAUAAAAqAA0AAAAJAAUAAAArAAoAAAAHAAUAAAArAAsAAAAHAAYAAAArAAwAAAAHAAUAAAArAA0AAAAKAAUAAAAsAAoAAAAEAAUAAAAsAAsAAAAEAAYAAAAsAAwAAAAIAAUAAAAsAA0AAAALAAUAAAAtAAoAAAAFAAUAAAAtAAsAAAAFAAYAAAAtAAwAAAAJAAUAAAAtAA0AAAAMAAUAAAAuAAoAAAAGAAUAAAAuAAsAAAAGAAYAAAAuAAwAAAAKAAUAAAAuAA0AAAANAAUAAAAvAAoAAAAHAAUAAAAvAAsAAAAHAAYAAAAvAAwAAAALAAUAAAAvAA0AAAALAAYAAAAwAAoAAAAIAAUAAAAwAAsAAAAIAAYAAAAwAAwAAAAMAAUAAAAwAA0AAAAMAAYAAAAxAAoAAAAJAAUAAAAxAAsAAAAJAAYAAAAxAAwAAAANAAUAAAAxAA0AAAANAAYAAAAyAAoAAAAKAAUAAAAyAAsAAAAKAAYAAAAyAAwAAAAKAAcAAAAyAA0AAAALAAUAAAAzAAoAAAALAAUAAAAzAAsAAAALAAYAAAAzAAwAAAALAAcAAAAzAA0AAAAMAAUAAAA0AAwAAAAMAAcAAAA0AA0AAAANAAUAAAArAA4AAAAKAAYAAAArAA8AAAAKAAcAAAArABAAAAAKAAgAAAAsAA4AAAALAAYAAAAsAA8AAAALAAcAAAAsABAAAAALAAgAAAAtAA4AAAAMAAYAAAAtAA8AAAAMAAcAAAAtABAAAAAMAAgAAAAuAA4AAAANAAYAAAAuAA8AAAANAAcAAAAuABAAAAANAAgAAAAvAA4AAAALAAcAAAAvAA8AAAALAAgAAAAvABAAAAAMAAUAAAAwAA4AAAAMAAcAAAAwAA8AAAAMAAgAAAAwABAAAAANAAUAAAAxAA4AAAANAAcAAAAxAA8AAAANAAgAAAAxABAAAAAKAAUAAAAyAA4AAAALAAYAAAAyAA8AAAALAAcAAAAyABAAAAALAAUAAAAzAA4AAAAMAAYAAAAzAA8AAAAMAAcAAAAzABAAAAAMAAUAAAA0AA4AAAANAAYAAAA0AA8AAAANAAcAAAA0ABAAAAANAAUAAAAoAA4AAAAHAAYAAAAoAA8AAAAHAAcAAAApAA4AAAAIAAYAAAApAA8AAAAIAAcAAAAqAA4AAAAJAAYAAAAqAA8AAAAJAAcAAAAdAAsAAAAEAAUAAAAdAAwAAAAEAAYAAAAdAA0AAAAEAAcAAAAdAA4AAAAEAAUAAAAeAAsAAAAFAAUAAAAeAAwAAAAFAAYAAAAeAA0AAAAFAAcAAAAeAA4AAAAFAAUAAAAfAA4AAAAGAAUAAAAgAA4AAAAHAAUAAAAhAA4AAAAIAAUAAAAiAA4AAAAJAAUAAAAjAA4AAAAKAAUAAAAkAA4AAAALAAUAAAAlAA4AAAAEAAYAAAAmAA4AAAAFAAYAAAAdAA8AAAAEAAYAAAAdABAAAAAEAAUAAAAdABEAAAAEAAYAAAAeAA8AAAAFAAYAAAAeABAAAAAFAAUAAAAeABEAAAAFAAYAAAAfAA8AAAAGAAYAAAAfABAAAAAGAAUAAAAfABEAAAAGAAYAAAAgAA8AAAAHAAYAAAAgABAAAAAHAAUAAAAgABEAAAAHAAYAAAAhAA8AAAAIAAYAAAAhABAAAAAIAAUAAAAhABEAAAAIAAYAAAAiAA8AAAAJAAYAAAAiABAAAAAJAAUAAAAiABEAAAAJAAYAAAAjAA8AAAAKAAYAAAAjABAAAAAKAAUAAAAjABEAAAAKAAYAAAAkAA8AAAALAAYAAAAkABAAAAALAAUAAAAkABEAAAAEAAUAAAAlAA8AAAAEAAcAAAAlABAAAAAEAAgAAAAlABEAAAAFAAUAAAAmAA8AAAAFAAcAAAAmABAAAAAFAAgAAAAmABEAAAAGAAUAAAAdABIAAAAEAAcAAAAdABMAAAAEAAUAAAAeABIAAAAFAAcAAAAeABMAAAAFAAUAAAAfABIAAAAGAAcAAAAfABMAAAAGAAUAAAAgABIAAAAHAAcAAAAgABMAAAAHAAUAAAAhABIAAAAIAAcAAAAhABMAAAAIAAUAAAAiABIAAAAJAAcAAAAiABMAAAAJAAUAAAAjABIAAAAKAAcAAAAjABMAAAAKAAUAAAAkABIAAAAEAAYAAAAkABMAAAAEAAcAAAAlABIAAAAFAAYAAAAlABMAAAAFAAcAAAAmABIAAAAGAAYAAAAmABMAAAAGAAcAAAAdABQAAAAEAAYAAAAdABUAAAAEAAUAAAAeABQAAAAFAAYAAAAeABUAAAAFAAUAAAAfABQAAAAGAAYAAAAfABUAAAAGAAUAAAAgABQAAAAHAAYAAAAgABUAAAAHAAUAAAAhABQAAAAIAAYAAAAhABUAAAAIAAUAAAAiABQAAAAJAAYAAAAiABUAAAAJAAUAAAAjABQAAAAKAAYAAAAjABUAAAAKAAUAAAAkABQAAAAEAAgAAAAkABUAAAAEAAUAAAAlABQAAAAFAAgAAAAlABUAAAAFAAUAAAAmABQAAAAGAAgAAAAmABUAAAAGAAUAAAAqABIAAAAKAAYAAAAqABMAAAAKAAcAAAAqABQAAAAKAAgAAAAqABUAAAAKAAUAAAArABIAAAALAAYAAAArABMAAAALAAcAAAArABQAAAALAAgAAAArABUAAAALAAUAAAAsABIAAAAMAAYAAAAsABMAAAAMAAcAAAAsABQAAAAMAAgAAAAsABUAAAAMAAUAAAAtABIAAAANAAYAAAAtABMAAAANAAcAAAAtABQAAAANAAgAAAAtABUAAAANAAUAAAAuABIAAAALAAcAAAAuABMAAAALAAgAAAAuABQAAAAHAAUAAAAuABUAAAAHAAYAAAAvABIAAAAMAAcAAAAvABMAAAAMAAgAAAAvABQAAAAIAAUAAAAvABUAAAAIAAYAAAAwABIAAAANAAcAAAAwABMAAAANAAgAAAAwABQAAAAJAAUAAAAwABUAAAAJAAYAAAAxABIAAAAKAAcAAAAxABMAAAAKAAgAAAAxABQAAAAKAAUAAAAxABUAAAAKAAYAAAAyABIAAAALAAcAAAAyABMAAAALAAgAAAAyABQAAAALAAUAAAAyABUAAAALAAYAAAAzABIAAAAMAAcAAAAzABMAAAAMAAgAAAAzABQAAAAMAAUAAAAzABUAAAAMAAYAAAA0ABQAAAANAAUAAAA0ABUAAAANAAYAAAArABEAAAALAAUAAAAsABEAAAAMAAUAAAAtABEAAAANAAUAAAAuABEAAAALAAYAAAAvABEAAAAMAAYAAAAwABEAAAANAAYAAAAxABEAAAAKAAYAAAAyABEAAAALAAYAAAAzABEAAAAMAAYAAAA0ABEAAAANAAYAAAA0ABIAAAANAAcAAAA0ABMAAAANAAgAAAAnABAAAAAGAAgAAAAnABEAAAAHAAUAAAAnABIAAAAHAAYAAAAnABMAAAAHAAcAAAAoABAAAAAHAAgAAAAoABEAAAAIAAUAAAAoABIAAAAIAAYAAAAoABMAAAAIAAcAAAApABAAAAAIAAgAAAApABEAAAAJAAUAAAApABIAAAAJAAYAAAApABMAAAAJAAcAAAAqABAAAAAJAAgAAAAqABEAAAAKAAUAAAAnAA4AAAAGAAYAAAAnAA8AAAAGAAcAAAAnABQAAAAHAAgAAAAoABQAAAAIAAgAAAApABQAAAAJAAgAAAAnABUAAAAHAAUAAAAoABUAAAAIAAUAAAApABUAAAAJAAUAAAAZABcAAAAAAAgAAAAZABgAAAAAAAUAAAAZABkAAAAAAAYAAAAZABoAAAAAAAUAAAAZABsAAAAAAAYAAAAZABwAAAAAAAcAAAAZAB0AAAAAAAgAAAAZAB4AAAAAAAwAAAAZAB8AAAAAAA0AAAAZACAAAAAAAA4AAAAZACEAAAAAAA8AAAAZACIAAAAAABAAAAAZACMAAAAAABEAAAAaABcAAAABAAgAAAAaABgAAAABAAUAAAAaABkAAAABAAYAAAAaABoAAAABAAkAAAAaABsAAAABAAoAAAAaABwAAAABAAsAAAAaAB0AAAABAAwAAAAaAB4AAAABAA0AAAAaAB8AAAABAA0AAAAaACAAAAABAA4AAAAaACEAAAABAA8AAAAaACIAAAABABAAAAAaACMAAAABABEAAAAbABcAAAACAAgAAAAbABgAAAACAAUAAAAbABkAAAACAAYAAAAbABoAAAACAAkAAAAbABsAAAACAAoAAAAbABwAAAACAAsAAAAbAB0AAAACAAwAAAAbAB4AAAACAA0AAAAbAB8AAAACAA0AAAAbACAAAAACAA4AAAAbACEAAAACAA8AAAAbACIAAAACABAAAAAbACMAAAACABEAAAAcABcAAAADAAkAAAAcABgAAAADAAoAAAAcABkAAAADAAsAAAAcABoAAAADAAwAAAAcABsAAAADAAoAAAAcABwAAAADAAsAAAAcAB0AAAADAAwAAAAcAB4AAAADAAwAAAAcAB8AAAADAA0AAAAcACAAAAADAA4AAAAcACEAAAADAA8AAAAcACIAAAADABAAAAAcACMAAAADABEAAAAdABcAAAAEAAkAAAAdABgAAAAEAAoAAAAdABkAAAAEAAsAAAAdABoAAAAEAAwAAAAdABsAAAAEAAoAAAAdABwAAAAEAAsAAAAdAB0AAAAEAAwAAAAdAB4AAAAEAAwAAAAdAB8AAAAEAA0AAAAdACAAAAAEAA4AAAAdACEAAAAEAA8AAAAdACIAAAAEABAAAAAdACMAAAAEABEAAAAeABcAAAAFAAkAAAAeABgAAAAFAAoAAAAeABkAAAAFAAsAAAAeABoAAAAFAAwAAAAeABsAAAAFAAoAAAAeABwAAAAFAAsAAAAeAB0AAAAFAAwAAAAeAB4AAAAFAAwAAAAeAB8AAAAFAA0AAAAeACAAAAAFAA4AAAAeACEAAAAFAA8AAAAeACIAAAAFABAAAAAeACMAAAAFABEAAAAfABcAAAAGAAkAAAAfABgAAAAGAAoAAAAfABkAAAAGAAsAAAAfABoAAAAGAAwAAAAfABsAAAAGAAoAAAAfABwAAAAGAAsAAAAfAB0AAAAGAAwAAAAfAB4AAAAGAAwAAAAfAB8AAAAGAA0AAAAfACAAAAAGAA4AAAAfACEAAAAGAA8AAAAfACIAAAAGABAAAAAfACMAAAAGABEAAAAgABcAAAAHAAkAAAAgABgAAAAHAAoAAAAgABkAAAAHAAsAAAAgABoAAAAHAAwAAAAgABsAAAAHAAoAAAAgABwAAAAHAAsAAAAgAB0AAAAHAAwAAAAgAB4AAAAHAAwAAAAgAB8AAAAHAA0AAAAgACAAAAAHAA4AAAAgACEAAAAHAA8AAAAgACIAAAAHABAAAAAgACMAAAAHABEAAAAhABcAAAAIAAkAAAAhABgAAAAIAAoAAAAhABkAAAAIAAsAAAAhABoAAAAIAAwAAAAhABsAAAAIAAoAAAAhABwAAAAIAAsAAAAhAB0AAAAIAAwAAAAhAB4AAAAIAAwAAAAhAB8AAAAIAA0AAAAhACAAAAAIAA4AAAAhACEAAAAIAA8AAAAhACIAAAAIABAAAAAhACMAAAAIABEAAAAiABcAAAAGAAkAAAAiABgAAAAGAAoAAAAiABkAAAAGAAsAAAAiABoAAAAGAAoAAAAiABsAAAAGAAoAAAAiABwAAAAGAAsAAAAiAB0AAAAGAAwAAAAiAB4AAAAJAAwAAAAiAB8AAAAJAA0AAAAiACAAAAAJAA4AAAAiACEAAAAJAA8AAAAiACIAAAAJABAAAAAiACMAAAAJABEAAAAjABcAAAAHAAkAAAAjABgAAAAHAAoAAAAjABkAAAAHAAsAAAAjABoAAAAHAAoAAAAjABsAAAAHAAoAAAAjABwAAAAHAAsAAAAjAB0AAAAHAAwAAAAjAB4AAAAGAAwAAAAjAB8AAAAGAA0AAAAjACAAAAAGAA4AAAAjACEAAAAGAA8AAAAjACIAAAAGABAAAAAjACMAAAAGABEAAAAkABcAAAAIAAkAAAAkABgAAAAIAAoAAAAkABkAAAAIAAsAAAAkABoAAAAIAAoAAAAkABsAAAAIAAoAAAAkABwAAAAIAAsAAAAkAB0AAAAIAAwAAAAkAB4AAAAHAAwAAAAkAB8AAAAHAA0AAAAkACAAAAAHAA4AAAAkACEAAAAHAA8AAAAkACIAAAAHABAAAAAkACMAAAAHABEAAAAlABcAAAAJAAkAAAAlABgAAAAJAAoAAAAlABkAAAAJAAsAAAAlABoAAAAJAAoAAAAlABsAAAAJAAoAAAAlABwAAAAJAAsAAAAlAB0AAAAJAAwAAAAlAB4AAAAIAAwAAAAlAB8AAAAIAA0AAAAlACAAAAAIAA4AAAAlACEAAAAIAA8AAAAlACIAAAAIABAAAAAlACMAAAAIABEAAAAmABcAAAAKAAkAAAAmABgAAAAKAAoAAAAmABkAAAAGAAoAAAAmABoAAAAGAAsAAAAmABsAAAAGAAwAAAAmABwAAAAGAAsAAAAmAB0AAAAGAAwAAAAmAB4AAAAJAAwAAAAmAB8AAAAJAA0AAAAmACAAAAAJAA4AAAAmACEAAAAJAA8AAAAmACIAAAAJABAAAAAmACMAAAAJABEAAAAnABcAAAAGAAkAAAAnABgAAAAGAAoAAAAnABkAAAAHAAoAAAAnABoAAAAHAAsAAAAnABsAAAAHAAwAAAAnABwAAAAHAAsAAAAnAB0AAAAHAAwAAAAnAB4AAAAKAAwAAAAnAB8AAAAKAA0AAAAnACAAAAAKAA4AAAAnACEAAAAKAA8AAAAnACIAAAAKABAAAAAnACMAAAAKABEAAAAoABcAAAAHAAkAAAAoABgAAAAHAAoAAAAoABkAAAAIAAoAAAAoABoAAAAIAAsAAAAoABsAAAAIAAwAAAAoABwAAAAIAAsAAAAoAB0AAAAIAAwAAAAoAB4AAAALAAwAAAAoAB8AAAALAA0AAAAoACAAAAALAA4AAAAoACEAAAALAA8AAAAoACIAAAALABAAAAAoACMAAAALABEAAAApABcAAAAIAAkAAAApABgAAAAIAAoAAAApABkAAAAJAAoAAAApABoAAAAJAAsAAAApABsAAAAJAAwAAAApABwAAAAJAAsAAAApAB0AAAAJAAwAAAApAB4AAAAGAAwAAAApAB8AAAAGAA0AAAApACAAAAAGAA4AAAApACEAAAAGAA8AAAApACIAAAAGABAAAAApACMAAAAGABEAAAAqABcAAAAJAAkAAAAqABgAAAAJAAoAAAAqABkAAAAKAAoAAAAqABoAAAAKAAsAAAAqABsAAAAKAAwAAAAqABwAAAAGAAwAAAAqAB0AAAAGAAwAAAAqAB4AAAAHAAwAAAAqAB8AAAAHAA0AAAAqACAAAAAHAA4AAAAqACEAAAAHAA8AAAAqACIAAAAHABAAAAAqACMAAAAHABEAAAArABcAAAAKAAkAAAArABgAAAAKAAoAAAArABkAAAAJAAoAAAArABoAAAAJAAsAAAArABsAAAAJAAwAAAArABwAAAAHAAwAAAArAB0AAAAHAAwAAAArAB4AAAAIAAwAAAArAB8AAAAIAA0AAAArACAAAAAIAA4AAAArACEAAAAIAA8AAAArACIAAAAIABAAAAArACMAAAAIABEAAAAsABcAAAAGAAkAAAAsABgAAAAGAAoAAAAsABkAAAAKAAoAAAAsABoAAAAKAAsAAAAsABsAAAAKAAwAAAAsABwAAAAIAAwAAAAsAB0AAAAIAAwAAAAsAB4AAAAJAAwAAAAsAB8AAAAJAA0AAAAsACAAAAAJAA4AAAAsACEAAAAJAA8AAAAsACIAAAAJABAAAAAsACMAAAAJABEAAAAtABcAAAAHAAkAAAAtABgAAAAHAAoAAAAtABkAAAAHAAsAAAAtABoAAAAJAAoAAAAtABsAAAAJAAsAAAAtABwAAAAJAAwAAAAtAB0AAAAJAAwAAAAtAB4AAAAKAAwAAAAtAB8AAAAKAA0AAAAtACAAAAAKAA4AAAAtACEAAAAKAA8AAAAtACIAAAAKABAAAAAtACMAAAAKABEAAAAuABcAAAAIAAkAAAAuABgAAAAIAAoAAAAuABkAAAAIAAsAAAAuABoAAAAKAAoAAAAuABsAAAAKAAsAAAAuABwAAAAKAAwAAAAuAB0AAAAKAAwAAAAuAB4AAAALAAwAAAAuAB8AAAALAA0AAAAuACAAAAALAA4AAAAuACEAAAALAA8AAAAuACIAAAALABAAAAAuACMAAAALABEAAAAvABcAAAAGAAkAAAAvABgAAAAGAAoAAAAvABkAAAAGAAsAAAAvABoAAAAHAAoAAAAvABsAAAAHAAsAAAAvABwAAAAHAAwAAAAvAB0AAAAGAAwAAAAvAB4AAAAGAAwAAAAvAB8AAAAGAA0AAAAvACAAAAAGAA4AAAAvACEAAAAGAA8AAAAvACIAAAAGABAAAAAvACMAAAAGABEAAAAwABcAAAAGAAkAAAAwABgAAAAGAAoAAAAwABkAAAAGAAsAAAAwABoAAAAIAAoAAAAwABsAAAAIAAsAAAAwABwAAAAIAAwAAAAwAB0AAAAGAAwAAAAwAB4AAAAHAAwAAAAwAB8AAAAHAA0AAAAwACAAAAAHAA4AAAAwACEAAAAHAA8AAAAwACIAAAAHABAAAAAwACMAAAAHABEAAAAxABcAAAAGAAkAAAAxABgAAAAGAAoAAAAxABkAAAAGAAsAAAAxABoAAAAJAAoAAAAxABsAAAAJAAsAAAAxABwAAAAJAAwAAAAxAB0AAAAHAAwAAAAxAB4AAAAIAAwAAAAxAB8AAAAIAA0AAAAxACAAAAAIAA4AAAAxACEAAAAIAA8AAAAxACIAAAAIABAAAAAxACMAAAAIABEAAAAyABcAAAAHAAkAAAAyABgAAAAHAAoAAAAyABkAAAAHAAsAAAAyABoAAAAKAAoAAAAyABsAAAAKAAsAAAAyABwAAAAKAAwAAAAyAB0AAAAIAAwAAAAyAB4AAAAJAAwAAAAyAB8AAAAJAA0AAAAyACAAAAAJAA4AAAAyACEAAAAJAA8AAAAyACIAAAAJABAAAAAyACMAAAAJABEAAAAzABcAAAAIAAkAAAAzABgAAAAIAAoAAAAzABkAAAAIAAsAAAAzABoAAAAIAAoAAAAzABsAAAAIAAsAAAAzABwAAAAIAAwAAAAzAB0AAAAJAAwAAAAzAB4AAAAKAAwAAAAzAB8AAAAKAA0AAAAzACAAAAAKAA4AAAAzACEAAAAKAA8AAAAzACIAAAAKABAAAAAzACMAAAAKABEAAAA0ABcAAAAJAAkAAAA0ABgAAAAJAAoAAAA0ABkAAAAJAAsAAAA0ABoAAAAJAAoAAAA0ABsAAAAMAAsAAAA0ABwAAAAJAAwAAAA0AB0AAAAKAAwAAAA0AB4AAAALAAwAAAA0AB8AAAALAA0AAAA0ACAAAAALAA4AAAA0ACEAAAALAA8AAAA0ACIAAAALABAAAAA0ACMAAAALABEAAAA1ABcAAAANAAkAAAA1ABgAAAANAAoAAAA1ABkAAAANAAsAAAA1ABoAAAANAAwAAAA1ABsAAAANAAsAAAA1ABwAAAAKAAwAAAA1AB0AAAANAAsAAAA1AB4AAAANAAwAAAA1AB8AAAANAA0AAAA1ACAAAAANAA4AAAA1ACEAAAANAA8AAAA1ACIAAAANABAAAAA1ACMAAAANABEAAAA2ABcAAAAOAAcAAAA2ABgAAAAOAAoAAAA2ABkAAAAOAAsAAAA2ABoAAAAOAAwAAAA2ABsAAAAOAAsAAAA2ABwAAAAOAAoAAAA2AB0AAAAOAAsAAAA2AB4AAAAOAAwAAAA2AB8AAAAOAA0AAAA2ACAAAAAOAA4AAAA2ACEAAAAOAA8AAAA2ACIAAAAOABAAAAA2ACMAAAAOABEAAAA3ABcAAAAPAAcAAAA3ABgAAAAPAAcAAAA3ABkAAAAPAAYAAAA3ABoAAAAPAAcAAAA3ABsAAAAPAAkAAAA3ABwAAAAPAAoAAAA3AB0AAAAPAAsAAAA3AB4AAAAPAAwAAAA3AB8AAAAPAA0AAAA3ACAAAAAPAA4AAAA3ACEAAAAPAA8AAAA3ACIAAAAPABAAAAA3ACMAAAAPABEAAAA4ABcAAAAQAAcAAAA4ABgAAAAQAAcAAAA4ABkAAAAQAAYAAAA4ABoAAAAQAAcAAAA4ABsAAAAQAAkAAAA4ABwAAAAQAAoAAAA4AB0AAAAQAAsAAAA4AB4AAAAQAAwAAAA4AB8AAAAQAA0AAAA4ACAAAAAQAA4AAAA4ACEAAAAQAA8AAAA4ACIAAAAQABAAAAA4ACMAAAAQABEAAAAZABYAAAAAAAgAAAAaABYAAAABAAgAAAAbABYAAAACAAgAAAAcABYAAAADAAgAAAAdABYAAAAEAAgAAAAeABYAAAAFAAgAAAAfABYAAAAGAAgAAAAgABYAAAAHAAgAAAAhABYAAAAIAAgAAAAyABYAAAAKAAgAAAAzABYAAAALAAgAAAA0ABYAAAAMAAgAAAA1ABYAAAANAAgAAAA2ABYAAAAOAAYAAAA3ABYAAAAPAAYAAAA4ABYAAAAQAAYAAAAiABYAAAAGAAcAAAAjABYAAAAHAAcAAAAkABYAAAAIAAcAAAAlABYAAAAJAAcAAAAmABYAAAAKAAcAAAAnABYAAAALAAcAAAAoABYAAAAGAAcAAAApABYAAAAHAAcAAAAqABYAAAAGAAcAAAArABYAAAAHAAcAAAAsABYAAAAGAAcAAAAtABYAAAAHAAcAAAAuABYAAAAIAAcAAAAvABYAAAAJAAcAAAAwABYAAAAKAAcAAAAxABYAAAALAAcAAAA=")
tile_set = ExtResource("2_dhyxn")

[node name="Slot" parent="CanvasLayer/MenuBuild" instance=ExtResource("3_um327")]
offset_left = 511.0
offset_top = 135.0
offset_right = 639.0
offset_bottom = 263.0

[node name="Casa" type="Label" parent="CanvasLayer/MenuBuild/Slot"]
layout_mode = 0
offset_left = 4.0
offset_top = 133.0
offset_right = 210.0
offset_bottom = 212.0
scale = Vector2(0.58522, 0.58522)
text = "Casa
+15 población"
label_settings = ExtResource("4_b2p4e")
horizontal_alignment = 1

[node name="Slot2" parent="CanvasLayer/MenuBuild" instance=ExtResource("3_um327")]
offset_left = 510.0
offset_top = 317.0
offset_right = 638.0
offset_bottom = 445.0

[node name="Casa2" type="Label" parent="CanvasLayer/MenuBuild/Slot2"]
layout_mode = 0
offset_left = -1.0
offset_top = 131.0
offset_right = 220.0
offset_bottom = 210.0
scale = Vector2(0.58522, 0.58522)
text = "Fábrica
+180 Recursos"
label_settings = ExtResource("4_b2p4e")
horizontal_alignment = 1

[node name="Slot3" parent="CanvasLayer/MenuBuild" instance=ExtResource("3_um327")]
offset_left = 677.0
offset_top = 134.0
offset_right = 805.0
offset_bottom = 262.0

[node name="Casa2" type="Label" parent="CanvasLayer/MenuBuild/Slot3"]
layout_mode = 0
offset_left = 3.0
offset_top = 134.0
offset_right = 209.0
offset_bottom = 213.0
scale = Vector2(0.58522, 0.58522)
text = "Granja
+120 Comida"
label_settings = ExtResource("4_b2p4e")
horizontal_alignment = 1

[node name="Slot4" parent="CanvasLayer/MenuBuild" instance=ExtResource("3_um327")]
offset_left = 676.0
offset_top = 317.0
offset_right = 804.0
offset_bottom = 445.0

[node name="Casa3" type="Label" parent="CanvasLayer/MenuBuild/Slot4"]
layout_mode = 0
offset_left = 4.0
offset_top = 131.0
offset_right = 210.0
offset_bottom = 210.0
scale = Vector2(0.58522, 0.58522)
text = "Faro
+15 población"
label_settings = ExtResource("4_b2p4e")
horizontal_alignment = 1

[node name="Cerrar" type="Button" parent="CanvasLayer/MenuBuild"]
offset_left = 862.0
offset_top = 88.0
offset_right = 902.0
offset_bottom = 128.0
icon = ExtResource("3_4cii0")
flat = true

[connection signal="pressed" from="CanvasLayer/MenuBuild/Slot" to="." method="_on_slot_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuBuild/Slot2" to="." method="_on_slot_2_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuBuild/Slot3" to="." method="_on_slot_3_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuBuild/Slot4" to="." method="_on_slot_3_pressed"]
